Added styles, FontAwesome and settings

--- a/mod_social_share_buttons/language/en-GB/en-GB.mod_social_share_buttons.ini
+++ b/mod_social_share_buttons/language/en-GB/en-GB.mod_social_share_buttons.ini
@@ -1,2 +1,15 @@
 MOD_SOCIAL_SHARE_BUTTONS_NAME = "Social Share Buttons"
 MOD_SOCIAL_SHARE_BUTTONS_DESC = "Displays social media buttons to share the page"
+
+
+# Params
+COM_MODULES_INCLUDE_STYLESHEETS_FIELDSET_LABEL = "Include stylesheets"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_CSS_LABEL = "Include style file?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_CSS_DESC = "Will include style file «style.css» or «style.min.css» from the module"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_MIN_CSS_LABEL = "Include optimized style file?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_MIN_CSS_DESC = "If yes, will include file «style.min.css» from module"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_FONT_AWESOME_LABEL = "Include FontAwesome?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_FONT_AWESOME_DESC = "Will include FontAwesome service icons"
