--- a/mod_social_share_buttons/language/ru-RU/ru-RU.mod_social_share_buttons.ini
+++ b/mod_social_share_buttons/language/ru-RU/ru-RU.mod_social_share_buttons.ini
@@ -1,2 +1,15 @@
 MOD_SOCIAL_SHARE_BUTTONS_NAME = "Social Share Buttons"
 MOD_SOCIAL_SHARE_BUTTONS_DESC = "Выводит кнопки социальных сетей, чтобы поделиться текущей страницей"
+
+
+# Параметры
+COM_MODULES_INCLUDE_STYLESHEETS_FIELDSET_LABEL = "Подключение стилей"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_CSS_LABEL = "Подключить файл стиля?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_CSS_DESC = "Подключает файл стиля «style.css» или «style.min.css» из модуля"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_MIN_CSS_LABEL = "Подключить сжатый файл стиля?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_STYLE_MIN_CSS_DESC = "Если да, то подключает «style.min.css» из модуля"
+
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_FONT_AWESOME_LABEL = "Подключить FontAwesome?"
+MOD_SOCIAL_SHARE_BUTTONS_PARAM_INCLUDE_FONT_AWESOME_DESC = "Подключает красивые FontAwesome иконки сервисов"
